--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
               autocomplete="off"
               data-form-input
             />
+            <input type="datetime-local" />
             <button type="submit" class="btnCreate" data-form-btn>
               Agregar <i class="fas fa-plus-circle"></i>
             </button>
           </form>
         </div>
-        <ul class="cardsList" data-list>
-        </ul>
+        <ul class="cardsList" data-list></ul>
       </div>
     </main>
     <script type="module" src="script.js"></script>
